--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,67 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(255, 255, 255);
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.subtitulo_elije_localidad{
+  background-color: rgb(68, 68, 68);
+  color: white;
+  font-family: 'Playfair Display', serif;
+  padding-top: 5px;
+  
+}
+
+.subtitulo_datos{
+  color:rgb(68, 68, 68);
+}
+
+.color_Provincia{
+  background-color: aqua;
+  text-align: center;
+}
+
+div.lista{
+  background-color: aqua;
+  box-shadow: -1px 1px 7px 0px rgb(17, 16, 17);
+  max-height: 40vh;
+  text-align: center;
+  overflow-y: scroll;
+  margin-bottom: 20px
+}
+
+.lista::-webkit-scrollbar{
+  display: none;
+}
+
+div.datos{
+  box-shadow: -1px 1px 7px 0px rgb(17, 16, 17);
+  background-color: white;
+}
+
+.footer{
+  padding-top: 10px;
+  text-align: center;
+}
+
+.ciudad_enlace{
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  text-decoration: none;
+  
+}
+
+.ciudad_enlace:hover{
+  cursor: pointer;
+  transform: scale(1.10);
+  transition: all 0.1s ease-in-out;
+}
+
+
+
