--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: white;
+  background-color: rgb(173, 219, 228);
 
 }
 
@@ -44,7 +44,8 @@ div.lista{
 
 div.marco{
   border-radius: 5px;
-  border: 1px solid rgb(204, 204, 204);;
+  border: 1px solid rgb(204, 204, 204);
+  background-color: aliceblue;
 }
 
 
@@ -61,9 +62,6 @@ div.marco{
 
 .ciudad_enlace{
   color: rgb(0, 0, 0);
-  display: inline-block;
-  text-decoration: none;
-  
 }
 
 .ciudad_enlace:hover{
@@ -73,4 +71,19 @@ div.marco{
 }
 
 
+.caja_buscar{
+  min-width: 100%;
+  background: #F8FEFF;
+  border: 1px solid #CCCCCC;
+  
+  border-radius: 4px;
+  
+  font-size: larger;
+  
+}
+
+.centrar{
+  margin-left: auto;
+  margin-right: auto;
+}
 
